fix: ConfigMapSecret - delete button not working, base.scss - border-radius class add, EnvConfigurationsNav - fix - collapsed item getting expanded on path change

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2685,6 +2685,18 @@ button.anchor {
     border-top-left-radius: 4px;
 }
 
+.dc__top-right-radius {
+    border-top-right-radius: 4px;
+}
+
+.dc__bottom-left-radius {
+    border-bottom-left-radius: 4px;
+}
+
+.dc__bottom-right-radius {
+    border-bottom-right-radius: 4px;
+}
+
 .dc__bottom-left-radius-8 {
     border-bottom-left-radius: 8px;
 }
